--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
-   "build" : "npm i"
-  },
+    "start": "node index.js",
+    "dev": "nodemon index.js"
+ },
   "keywords": [],
   "author": "",
   "license": "ISC",
